--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     <meta property="og:locale" content="ja_JP">
 
     <!-- SEO Meta Tags -->
-    <meta name="keywords" content="現地集合" />
-    <meta name="description" content="学べる出会いは現地集合" />
+    <meta name="keywords" content="長期修繕計画, 長期修繕計画作成サービス, smareno" />
+    <meta name="description" content="長期修繕計画作成サービス" />
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-    <meta property="og:title" content="学べる出会いは現地集合" />
-    <meta property="og:image" content="" />
-    <meta property="og:site_name" content="現地集合" />
-    <meta property="og:description" content="学べる出会いは現地集合" />
+    <meta property="og:title" content="長期修繕計画作成サービス" />
+    <meta property="og:image" content="./assets/img/logo.svg" />
+    <meta property="og:site_name" content="smareno" />
+    <meta property="og:description" content="長期修繕計画作成サービス" />
 
-    <title>学べる出会いは現地集合</title>
+    <title>長期修繕計画作成</title>
 
     <link rel="stylesheet" href="assets/font/fonts.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/common.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <link rel="shortcut icon" href="assets/img/favicon.ico">
-    <link rel="icon" type="image/png" href="assets/img/favicon.ico">
-    <link rel="apple-touch-icon" type="image/png" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="apple-touch-icon" type="image/png" href="assets/img/favicon.png">
 
     <script src="assets/js/jquery.min.js"></script>
 </head>
@@ -36,7 +36,7 @@
         <div class="header-wrapper">
             <h1 class="header-logo">
                 <a href="./index.html">
-                    <img src="./assets/img/logo.svg" alt="">
+                    <img src="./assets/img/logo.svg" alt="smareno">
                 </a>
             </h1>
             <nav class="header-nav">
@@ -69,31 +69,6 @@
                     <li>
                         <a href="#news" class="menu-link">
                             <span>お知らせ</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://reserve.489ban.net/client/ashizurithermae/0/plan" class="menu-link" target="_blank">
-                            <span>プラン一覧</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="10.914" height="10.914" viewBox="0 0 10.914 10.914">
-                                <path id="Path_1" data-name="Path 1" d="M12.139,21.536l9.5-9.5" transform="translate(-11.431 -11.328)" fill="none" stroke="#fbfbfb" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                                <path id="Path_2" data-name="Path 2" d="M22.038,20.121V12.036" transform="translate(-11.831 -11.328)" fill="none" stroke="#fbfbfb" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                                <path id="Path_3" data-name="Path 3" d="M13.553,12.036h8.086" transform="translate(-11.431 -11.328)" fill="none" stroke="#fbfbfb" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://dotglamping-ashizurimisaki.com/" class="menu-link" target="_blank">
-                            <span>グランピング</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="10.914" height="10.914" viewBox="0 0 10.914 10.914">
-                                <path id="Path_1" data-name="Path 1" d="M12.139,21.536l9.5-9.5" transform="translate(-11.431 -11.328)" fill="none" stroke="#fbfbfb" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                                <path id="Path_2" data-name="Path 2" d="M22.038,20.121V12.036" transform="translate(-11.831 -11.328)" fill="none" stroke="#fbfbfb" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                                <path id="Path_3" data-name="Path 3" d="M13.553,12.036h8.086" transform="translate(-11.431 -11.328)" fill="none" stroke="#fbfbfb" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/ashizuri.thermae/" class="instgram-link" target="_blank">
-                            <i class="fa-brands fa-instagram fa-fw"></i>
                         </a>
                     </li>
                 </ul>
@@ -133,73 +108,132 @@
                         <span>お知らせ</span>
                     </a>
                 </li>
-                <li>
-                    <a href="https://reserve.489ban.net/client/ashizurithermae/0/plan" class="menu-link" target="_blank">
-                        <span>プラン一覧</span>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="10.914" height="10.914" viewBox="0 0 10.914 10.914">
-                            <path id="Path_1" data-name="Path 1" d="M12.139,21.536l9.5-9.5" transform="translate(-11.431 -11.328)" fill="none" stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                            <path id="Path_2" data-name="Path 2" d="M22.038,20.121V12.036" transform="translate(-11.831 -11.328)" fill="none" stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                            <path id="Path_3" data-name="Path 3" d="M13.553,12.036h8.086" transform="translate(-11.431 -11.328)" fill="none" stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                        </svg>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://dotglamping-ashizurimisaki.com/" class="menu-link" target="_blank">
-                        <span>グランピング</span>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="10.914" height="10.914" viewBox="0 0 10.914 10.914">
-                            <path id="Path_1" data-name="Path 1" d="M12.139,21.536l9.5-9.5" transform="translate(-11.431 -11.328)" fill="none" stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                            <path id="Path_2" data-name="Path 2" d="M22.038,20.121V12.036" transform="translate(-11.831 -11.328)" fill="none" stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                            <path id="Path_3" data-name="Path 3" d="M13.553,12.036h8.086" transform="translate(-11.431 -11.328)" fill="none" stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
-                        </svg>
-                    </a>
-                </li>
             </ul>
-            <ul class="search-action">
-                <li>
-                    <a href="https://reserve.489ban.net/client/ashizurithermae/0/plan" class="btn" target="_blank">
-                        <span>ホテルの空室検索</span>
-                        <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_614_843)">
-                                <path d="M5 12.5H19" stroke="#3E3A39" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M13 18.5L19 12.5" stroke="#3E3A39" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M13 6.5L19 12.5" stroke="#3E3A39" stroke-linecap="round" stroke-linejoin="round"/>
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_614_843">
-                                    <rect width="24" height="24" fill="white" transform="translate(0 0.5)"/>
-                                </clipPath>
-                            </defs>
-                        </svg>                                                    
-                    </a>
-                </li>
-                <li>
-                    <a href="https://reserve.489ban.net/client/ashizurithermae/0/plan" class="btn" target="_blank">
-                        <span>グランピングの空室検索</span>
-                        <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_614_843)">
-                                <path d="M5 12.5H19" stroke="#3E3A39" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M13 18.5L19 12.5" stroke="#3E3A39" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M13 6.5L19 12.5" stroke="#3E3A39" stroke-linecap="round" stroke-linejoin="round"/>
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_614_843">
-                                    <rect width="24" height="24" fill="white" transform="translate(0 0.5)"/>
-                                </clipPath>
-                            </defs>
-                        </svg>                                                     
-                    </a>
-                </li>
-            </ul>
-            <p class="mobile-info"><a href="tel:0880-88-0301"><i class="fa fa-phone fa-fw"></i>0880-88-0301</a><br><a href="mailto:booking@ashizurithermae.com"><i class="fa fa-envelope-o fa-fw"></i>booking@ashizurithermae.com</a><br><a target="_blank" rel="noopener" href="https://www.instagram.com/ashizuri.thermae/"><i class="fab fa-instagram fa-fw"></i>ashizuri.thermae</a><br><a href="https://goo.gl/maps/QPEtpuhp1kUQDAuC9" target="_blank"><i class="fa fa-location-dot fa-fw"></i>高知県土佐清水市足摺岬字東畑1433-3</a></p>
         </nav>
     </div>
 
-    <main id="main">
+    <main id="first-page">
+        <div class="mainview">
+            <img class="big-smareno" src="./assets/img/big-text-smareno.svg">
+            <img class="mainview-bg" src="./assets/img/mainview-bg.svg">
+            <div class="text-wrapper">
+                <p class="main-text">この<span>家</span>が<span>好</span>き</p>
+                <p class="description">家族みんながずっと大好きでいられるような、お家づくりのお手伝い</p>
+            </div>
+        </div>
+        <section class="section1">
+            <div class="half-wrapper half-left">
+                <div class="half-container left-container">
+                    <div class="head-texts">
+                        <h1 class="text-jp font-60-700">スマリノ?</h1>
+                        <h3 class="text-en">What's SmaReno?</h3>
+                    </div>
+                    <img class="in-hoem" src="./assets/img/in-home.svg">
+                    <ul class="concept-wrapper">
+                        <li class="font-18-700">
+                            <img src="./assets/img/window-symbol.svg">
+                            <span>スマリノは</span>
+                        </li>
+                        <li class="font-14-500">
+                            <img src="./assets/img/right-in-circle.svg">
+                            <span>
+                                リノベーション<br>
+                                工事ではありません。
+                            </span>
+                        </li>
+                        <li class="font-14-500">
+                            <img src="./assets/img/right-in-circle.svg">
+                            <span>
+                                中古物件を<br>
+                                うためのあらゆる<br>
+                                サービスです。
+                            </span>
+                        </li>
+                        <li class="font-14-500">
+                            <img src="./assets/img/right-in-circle.svg">
+                            <span>
+                                リノベーション済み<br>
+                                物件も扱います。
+                            </span>
+                        </li>
+                        <li class="font-14-500">
+                            <img src="./assets/img/right-in-circle.svg">
+                            <span>
+                                築浅物件も扱います。
+                            </span>
+                        </li>
+                        <li class="font-14-500">
+                            <img src="./assets/img/right-in-circle.svg">
+                            <span>
+                                リフォームが必要な<br>
+                                中古物件も扱います。
+                            </span>
+                        </li>
+                    </ul>
+                    <p class="bottom-text font-24-700">
+                        だからお客様の<span class="font-28-700">選択肢</span>を増やします。
+                    </p>
+                </div>
+            </div>
 
+            <div class="half-wrapper half-right">
+                <div class="half-container right-container">
+                    <p class="smareno-text">Sma<span>Reno</span></p>
+                    <img class="image001" src="./assets/img/image001.svg">
+                    <div class="desc1 font-18-500">
+                        中古物件の成約数は新築物件の成約数を超えました。<br>
+                        <div class="underline-wrapper">それはお客様が<span class="underline-text font-24-700">｢資産価値｣</span>に目を向けたからです。</div>
+                    </div>
+                    <p class="green-pannel font-20-500">
+                        スマリノは<span class="font-22-700">｢資産価値｣</span>を最大化するために<br>
+                        特化した<b>｢サービス｣</b>です。
+                    </p>
+                    <div class="bottom-wrapper">
+                        <img class="image002" src="./assets/img/image002.svg">
+                        <div class="desc font-18-500">
+                            <div class="underline-wrapper">しっかりと<span class="underline-text font-24-700">資産価値</span>に</div>
+                            目を向け、お客様が10年後も<br>
+                            <span class="font-24-700">｢この家が好き｣</span>と言える<br>
+                            商品選びがスマリノです。
+                        </div>
+                    </div>
+                    <img class="bottom-img" src="./assets/img/image003.svg">
+                </div>
+            </div>
+        </section>
+
+        <section class="section2">
+            <div class="container">
+                <h1 class="head-text font-32-700">そのリフォーム本当に必要ですか？</h1>
+                <div class="catchcopy-explain">
+                    <ul class="explain">
+                        <li class="item">
+                            建物の修繕は避けられませんが、無駄や無計画なリフォームを検討していませんか？
+                        </li>
+                        <li class="item">
+                            「スマリノ」では無駄や無計画なリフォームを推奨していません。
+                        </li>
+                        <li class="item">
+                            トラブルが発生してからでも対応は間に合います。
+                        </li>
+                        <li class="item">
+                            しっかりとした修繕計画とそれに合わせた積立。
+                        </li>
+                        <li class="item">
+                            そして何より大事にしているのが一生涯の定期サポート。
+                        </li>
+                        <li class="item">
+                            「スマリノ」に安心安全な修繕計画をお手伝いさせてください。
+                        </li>
+                    </ul>
+                    <img class="image004" src="./assets/img/image004.svg">
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://kit.fontawesome.com/8cbdf0a85f.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/js/common.js"></script>
+    <!-- <script type="text/javascript" src="assets/js/common.js"></script> -->
 </body>
 
 </html>
