--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
                     <img class="image001" src="./assets/img/image001.svg">
                     <div class="desc1 font-18-500">
                         中古物件の成約数は新築物件の成約数を超えました。<br>
-                        <div class="underline-wrapper">それはお客様が<span class="underline-text font-24-700">｢資産価値｣</span>に目を向けたからです。</div>
+                        <div class="underline-wrapper">それはお客様が<span
+                                class="underline-text font-24-700">｢資産価値｣</span>に目を向けたからです。</div>
                     </div>
                     <p class="green-pannel font-20-500">
                         スマリノは<span class="font-22-700">｢資産価値｣</span>を最大化するために<br>
@@ -191,7 +192,8 @@
                     <div class="bottom-wrapper">
                         <img class="image002" src="./assets/img/image002.svg">
                         <div class="desc font-18-500">
-                            <div class="underline-wrapper">しっかりと<span class="underline-text font-24-700">資産価値</span>に</div>
+                            <div class="underline-wrapper">しっかりと<span class="underline-text font-24-700">資産価値</span>に
+                            </div>
                             目を向け、お客様が10年後も<br>
                             <span class="font-24-700">｢この家が好き｣</span>と言える<br>
                             商品選びがスマリノです。
@@ -207,26 +209,293 @@
                 <h1 class="head-text font-32-700">そのリフォーム本当に必要ですか？</h1>
                 <div class="catchcopy-explain">
                     <ul class="explain">
-                        <li class="item">
+                        <li class="item font-18-500">
                             建物の修繕は避けられませんが、無駄や無計画なリフォームを検討していませんか？
                         </li>
-                        <li class="item">
-                            「スマリノ」では無駄や無計画なリフォームを推奨していません。
+                        <li class="item font-18-500">
+                            <b>「スマリノ」</b>では無駄や無計画なリフォームを推奨していません。
                         </li>
-                        <li class="item">
+                        <li class="item font-18-500">
                             トラブルが発生してからでも対応は間に合います。
                         </li>
-                        <li class="item">
+                        <li class="item font-18-500">
                             しっかりとした修繕計画とそれに合わせた積立。
                         </li>
-                        <li class="item">
+                        <li class="item font-18-500">
                             そして何より大事にしているのが一生涯の定期サポート。
                         </li>
-                        <li class="item">
-                            「スマリノ」に安心安全な修繕計画をお手伝いさせてください。
+                        <li class="item font-18-500">
+                            <b>「スマリノ」</b>に安心安全な修繕計画をお手伝いさせてください。
                         </li>
                     </ul>
                     <img class="image004" src="./assets/img/image004.svg">
+                </div>
+                <div class="serve-catch">
+                    <div class="catch-pannel">
+                        <ul class="old-concept">
+                            <li class="font-18-500">
+                                「壊れたからなおす」
+                            </li>
+                            <li class="font-18-500">
+                                「勧められたのでこれもなおす」
+                            </li>
+                            <li class="font-18-500">
+                                「けっこうかかるな」
+                            </li>
+                            <li class="font-18-500">
+                                「ローンで借りればいいか」
+                            </li>
+                        </ul>
+                        <p class="desc font-18-500">
+                            これがリフォームの常識でした。<br>
+                            付き合いのある業者もなく、訪問してきた業者やネットで検索した業者を選択<br>
+                            無計画なまま、高いか安いかの相場もわからない。<br>
+                            無駄なリフォームの残債の支払いだけが、家計に大きくのしかかる。
+                        </p>
+                    </div>
+                    <img class="left-arrow" src="./assets/img/big-left-arrow.svg">
+                    <div class="explain-pannel">
+                        <div class="underline-wrapper font-18-500">スマリノでまず初めに行うことは<span
+                                class="underline-text font-20-700">「長期修繕計画」</span>と<span
+                                class="underline-text font-20-700">「ライフプランニング合わせた資金計画」</span>の策定です。</div>
+                        <p class="desc font-18-500">
+                            <b>修繕計画</b>と<b>資金計画</b>を一体として行い、長期の計画を立ててからスタートします。<br>
+                            壊れる前にお声がけください。もちろん計画書作成と定期診断は全て無料で行っています。<br>
+                            建物と資金の良き相談者がいないから、無駄や無計画なリフォームが発生します。<br>
+                        </p>
+                        <p class="bottom-desc font-18-500">
+                            他にはない<span class="green-text font-20-700">「サービス」</span>
+                            他にはない<span class="green-text font-20-700">「システム」</span>
+                            他にはない、いたれりつくせりの<span class="green-text font-20-700">「おもてなし」</span>で一生涯のお付合いをいたします。
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="no1">
+            <div class="container">
+                <div class="top-part">
+                    <div class="left-part">
+                        <h1 class="head-text font-60-700">エリアNo.1宣言</h1>
+                        <div class="explain-pannel">
+                            <h2 class="title font-22-700">全ての分野で地域NO1クラス</h2>
+                            <p class="content font-18-500">
+                                長期修繕計画、ライフプランニング、定期メンテナンス訪問、問い合わせ対応、顧客数、リフォーム工事実績、長期保証件数、そして営業マン数に至るまで、あらゆる面で地域の中でこの業界をリードしています。<br>
+                                これらの成果は、私たちの専門知識、献身的なサービス、お客様に寄り添う姿勢の結果です。<br>
+                                お客様のニーズに応え続けることで培われた、信頼と実績の蓄積が「スマリノ」の真の強みです。
+                            </p>
+                        </div>
+                    </div>
+                    <img class="image005" src="./assets/img/image005.png">
+                </div>
+                <div class="bottom-part">
+                    <h2 class="title font-24-700">各分野で地域NO1クラスの実績を誇ります。</h2>
+                    <div class="content">
+                        <ul class="no-wrapper">
+                            <li class="item">
+                                <img src="./assets/img/No1-001.png">
+                            </li>
+                            <li class="item">
+                                <img src="./assets/img/No1-002.png">
+                            </li>
+                            <li class="item">
+                                <img src="./assets/img/No1-003.png">
+                            </li>
+                            <li class="item">
+                                <img src="./assets/img/No1-004.png">
+                            </li>
+                            <li class="item">
+                                <img src="./assets/img/No1-005.png">
+                            </li>
+                            <li class="item">
+                                <img src="./assets/img/No1-006.png">
+                            </li>
+                            <li class="item">
+                                <img src="./assets/img/No1-007.png">
+                            </li>
+                            <li class="item">
+                                <img src="./assets/img/No1-008.png">
+                            </li>
+                        </ul>
+                        <img class="image006" src="./assets/img/image006.png">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="review-section">
+            <div class="half-wrapper half-left">
+                <div class="half-container left-container">
+                    <h1 class="head-text font-48-700">スマリノは組織で動く</h1>
+                    <div class="review-content">
+                        <div class="underline-wrapper font-20-700">お客様をバックアップするのは担当営業ではなく、
+                            <div class="underline-text font-20-700"><span class="font-36-700">100</span>名のチームです。</div>
+                            <span class="font-16-500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;※営業60名と技術40名</span>
+                        </div>
+                        <ul class="three-contents">
+                            <li class="content font-16-500">
+                                アフター専属の部署が<br>
+                                あるから安心
+                            </li>
+                            <li class="content font-16-500">
+                                建設業免許が<br>
+                                あるから安心
+                            </li>
+                            <li class="content font-16-500">
+                                工事の可視化に<br>
+                                よる安心
+                            </li>
+                        </ul>
+                        <p class="suumo-review font-24-700">スマリノの顧客満足度は<span class="font-36-700">4.8</span></p>
+                        <p class="suumo-desc font-18-500">
+                            弊社「顧客満足度」はSUUMO調査で地域NO1クラス。<br>
+                            SUUMOの接客評価コメントで5点満点中4.8点の評価をいただいています。
+                        </p>
+                        <p class="google-review font-20-700">「googleの口コミ」4.5点</p>
+                        <div class="stars-img">
+                            <div class="stars">
+                                <p class="label font-20-700">内訳 (接客評価コメント228件中)</p>
+                                <div class="star-wrapper">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <span class="font-24-700">194件</span>
+                                </div>
+                                <div class="star-wrapper">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <span class="font-24-700">27件</span>
+                                </div>
+                                <div class="star-wrapper">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <span class="font-24-700">6件</span>
+                                </div>
+                                <div class="star-wrapper">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <span class="font-24-700">0件</span>
+                                </div>
+                                <div class="star-wrapper">
+                                    <img class="star" src="./assets/img/star.svg">
+                                    <span class="font-24-700">1件</span>
+                                </div>
+                            </div>
+                            <img class="image007" src="assets/img/image007.png">
+                        </div>
+                    </div>
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノはリフォームではない! 相模原 T様</h3>
+                        <p class="content font-14-400">
+                            中古物件に対する考え方が変わりました。 リノベーション済み物件 築浅物件・リフォームが必要な物件を一つ一つ細かく丁寧にスタッ フの方に説明してもらいました。そのおかげで
+                            「資産価値」に目を向けることができるようになりました。 「資産価値」に目を向けたこ とで、10年後も安心して暮らせる素晴らしいマイホームを手にすることができ、
+                            とても満足しています。
+                        </p>
+                    </div>
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノの価格がスゴイ! 町田 F様</h3>
+                        <p class="content font-14-400">
+                            当初、 不動産会社とリフォーム会社を別々にお願いしていましたが、 希望通りの内容では予算内に抑えることが出来ませんでした。 しか
+                            し、スマリノでは不動産営業の方とリノベーション監督がチームで対応してくれるので、リフォームの営業等に経費がかからないそうで 希望通りの内容で予算より安く抑えることができました。
+                            年間300件以上の工事実績も信頼できます。 現場の職人さんの雰囲気や取付け る設備についても想像以上に納得のいく内容で本当に感謝しています。
+                        </p>
+                    </div>
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノの中古物件探し 八王子 O様</h3>
+                        <p class="content font-14-400">
+                            スマリノでは中古物件のメリットを最大限に生かす物件探しができました。 中古物件の資産価値」 の高さや新築に比べた利便性の高さ を知って驚きました。
+                            過去の膨大なデータから価格が下げ止まるタイミングを導き出し、 立地も考えて 「資産価値」の高い中古物件を購 入することができました。
+                        </p>
+                    </div>
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノは物件数が違う! 座間 K様</h3>
+                        <p class="content font-14-400">
+                            地元で創業15年という地域に密着した会社だったので、 情報力があるかと思い相談する事にしました。 営業スタッフも60名と多く売却専 業部署まであるそうです。
+                            その売却専門部署が地域最大級らしく、 未公開物件を含め物件数の多さにびっくりしました。 他社では得られ
+                            なかった情報も多く自分の条件に当てはまる物件は、100件以上もありました。 リフォーム済み物件やリフォームが必要な物件、 築浅物
+                            件まで、数多くの選択肢の中から満足のいく物件に出会うことができました。
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="half-wrapper half-right">
+                <div class="half-container right-container">
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノは安全重視! 厚木 R様</h3>
+                        <p class="content font-14-400">
+                            スマリノは地元業者だからこそわかる地域情報や土地柄、 建築メーカーの評判などを詳しく丁寧に教えていただき、ハザードマップや事
+                            故情報など気になる部分についても一緒に調べてくださいました。 土地勘のない私たちにはない目線で周辺環境 交通情報 相場などを 説明してもらえました。 また、
+                            建設業免許もある会社だったので耐震性などにも詳しく安心して安全な家を買うことができてとても満足 しています。
+                        </p>
+                    </div>
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノの融資にびっくり! 愛川町 M様</h3>
+                        <p class="content font-14-400">
+                            他の不動産会社に相談していましたが、 使えない銀行があったり、 予想よりも高い金利だったりと悩んでいました。 知人からローンに強
+                            い会社だと聞いてスマリノを紹介してもらい相談してみました。 60名も営業スタッフが在籍していることにも驚きましたが、一人一人が
+                            ローンについて詳しく経験も豊富だったので安心できました。 私の条件に相性の良い銀行を選んで何度も銀行の方に交渉して頂き、 想像 していたよりも低金利で審査が通りました。
+                            相談して本当に良かったです。
+                        </p>
+                    </div>
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノは決済まで安心! 相模原 D様</h3>
+                        <p class="content font-14-400">
+                            物件紹介から契約、 引渡しやアフターサービスまでの各分野で丁寧にサポートしてくれました。 総勢100名のスタッフが、
+                            営業部・契約部・アフター専門部と専属スタッフがそれぞれ対応してくれたので安心しました。 契約前の細かい調査や、 売却側の不動産会社との保証 の交渉、契約、 銀行のローン手続き、
+                            引渡しまで、 営業スタッフと契約部スタッフがタッグを組んで解りやすく丁寧にやっていただき、 安心感を得られました。 アフターサービスも専門スタッフがいるので購入後も安心です。
+                        </p>
+                    </div>
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノの適度なリフォーム! 町田 E様</h3>
+                        <p class="content font-14-400">
+                            他社と違って、物件購入からリフォームまでワンストップでできることが便利だと感じました。
+                            予算や物件に合わせてプランを選べたり、パッケージ型・オーダー型など幅広い提案をしてくれました。 一つの会社に不動産購入からリフォームまで、 全てお願いすることが出来
+                            たので、余計な時間や予算をかけずに済みました。 ローンに関しても住宅ローンで一本化して頂き返済金額や手数料を抑えることが出来 たのは嬉しかったです。
+                            職人さんともマメに打ち合わせをしてもらい納得のいくリフォームをすることができました。
+                        </p>
+                    </div>
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノのアフターに感動! 八王子市 H様</h3>
+                        <p class="content font-14-400">
+                            物件の引渡しを終えてから約1ヶ月が経過しますが、 アフターサービスや保証内容 (設備延長保証や駆けつけサービスなど) が充実して いて本当に良かったと実感しています。
+                            特に驚いたのは長期修繕計画があったことです。 ここまでサポートする会社は聞いたことがあり ませんでした。 不動産購入は今回で3度目でしたが、
+                            創業15年の実績と建設業免許やアフターサービス専属部署もありアフターサービス は一番です。
+                            工事状況や現場の職人さんに至るまで明確で、ここまで安心して信頼できる会社は、今まで取引した中でこの一社だけだと 思います。
+                            また不動産を購入することがあったらもう一度お願いしようと考えております。
+                        </p>
+                    </div>
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノの見積りにはない・・・! 座間 N様</h3>
+                        <p class="content font-14-400">
+                            リフォームの相談をした当初、 こちらの会社の見積金額は正直、 他の会社と比べて特別安いとは感じませんでした。 しかし、 他の会社の
+                            見積内容や保証、アフターサービスなどを細かく見直していく中で、 他の会社の方が施工方法や金額以外での問題点や不安も多いことに 気づきました。 見積りの安かった会社に再度、
+                            見直した内容を確認したら結局、 後から別工事や別途オプションが必要とのことでした。 やっぱりスマリノの見積りが一番だという事に気づかされました。 更には、
+                            契約書における専属スタッフが細かい調査をしてしっかりと した契約書を作成して頂けました。 見積りの価格だけを見て間違った選択をするところでした。 本当にありがとうございました。
+                        </p>
+                    </div>
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノの顧客満足度! 厚木 I 様</h3>
+                        <p class="content font-14-400">
+                            総勢100名ものスタッフが在籍しているので不動産の購入やローン、リノベーションの相談まで担当の営業スタッフだけでなく各専門スタッフがバックアップしてくださりスムーズでした。
+                            初めは複数のスタッフが担当するシステムに驚きましたが、 各専門部署が一人ひと りに対して全力でサポートをしてくれるので、 会社全体で担当してくれている感じがして安心しました。
+                            ネットで会社を調べてみました がSUUMOの接客評価コメントも4.8で地域トップクラスというのも解かる気がします。
+                        </p>
+                    </div>
+                    <div class="review-pannel">
+                        <h3 class="title font-18-700">スマリノの想いが! 相模原 W様</h3>
+                        <p class="content font-14-400">
+                            生涯で一番高い買い物を本当にこの会社に任せても大丈夫か最初は不安でした。 過去に行った不動産会社はこちらの思いをあまり汲み取ってくれず押し付けられるような感じがしましたが、
+                            スマリノは丁寧に話を聞いて、 幅広い提案をしてくださいました。 高額な買い物を しっかりとコンサルティングしてもらえて本当によかったです。
+                            単なる販売員ではない信頼できるコンサルタントが集まっているように 感じました。 住宅購入の夢を一緒に追いかけてくれる姿勢に心を動かされました。
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
