--- a/index.html
+++ b/index.html
@@ -499,6 +499,202 @@
                 </div>
             </div>
         </section>
+        <section class="trouble-section">
+            <div class="half-wrapper half-left">
+                <div class="half-container left-container">
+                    <ul class="cards-list">
+                        <li class="card-item">
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class="card-wrapper">
+                                <div class="card">
+                                    <div class="img-wrapper">
+                                        <img class="image011" src="./assets/img/image011.png">
+                                    </div>
+                                    <div class="right-wrapper">
+                                        <h4 class="title font-20-700">将来面</h4>
+                                        <p class="font-14-400">
+                                            「老後を見越したバリアフリー設計をしておらず、後に再リフォームが必要になった。」<br>
+                                            「子供の成長に合わせた可変性を持たせた間取りにしなかったため、後で壁を壊して間取りを変える必要が生じた。」<br>
+                                            「エコ設備への投資を怠ったため、光熱費が想定以上にかさみ、将来の負担が増えた。」<br>
+                                            「家の将来価値を考えずに個性的すぎるデザインにしてしまい、売却時に評価が低くなった。」<br>
+                                            「技術の進歩を考慮せずに旧式のシステムを導入したため、すぐに時代遅れになり、機能的な不満が残った。」
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="card-item">
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class="card-wrapper">
+                                <div class="card reverse">
+                                    <div class="img-wrapper">
+                                        <img class="image012" src="./assets/img/image012.png">
+                                    </div>
+                                    <div class="right-wrapper">
+                                        <h4 class="title font-20-700">リフォーム業者選択</h4>
+                                        <p class="font-14-400">
+                                            「安さだけで選んだ業者だったので、完成度が低く後悔しています。」<br>
+                                            「口コミをしっかり確認せずに決めたため、施工の質が悪かったです。」<br>
+                                            「業者の専門分野を確認しなかったため、期待した専門技術が得られませんでした。」<br>
+                                            「総合的なサービスを提供する業者ではなかったので、結局複数の業者に依頼するはめになりました。」<br>
+                                            「即決で業者を選んだら、他にもっと良い条件の業者がいたことを後で知りました。」
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="card-item">
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class="card-wrapper">
+                                <div class="card">
+                                    <div class="img-wrapper">
+                                        <img class="image013" src="./assets/img/image013.png">
+                                    </div>
+                                    <div class="right-wrapper">
+                                        <h4 class="title font-20-700">リフォーム業者とのやり取り</h4>
+                                        <p class="font-14-400">
+                                            「詳細な契約書を作らずに進めたので、予定外の追加費用が発生しました。」<br>
+                                            「途中で想定外の工事が必要になった時、業者の対応が遅くてストレスが溜まりました。」<br>
+                                            「業者との連絡が取りづらく、工事の進捗がいつもわからない状態でした。」<br>
+                                            「変更事項のコミュニケーションがうまくいかず、結果的に希望と違うリフォームになってしまいました。」<br>
+                                            「工事中の問題に対する対応を業者がリードしてくれず、自分で解決する部分が多くて困りました。」
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="card-item">
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class="card-wrapper">
+                                <div class="card reverse">
+                                    <div class="img-wrapper">
+                                        <img class="image014" src="./assets/img/image014.png">
+                                    </div>
+                                    <div class="right-wrapper">
+                                        <h4 class="title font-20-700">アフターメンテナンス</h4>
+                                        <p class="font-14-400">
+                                            「工事完了後のフォローが全くなく、不具合が生じた時に困りました。」<br>
+                                            「保証期間や保証内容が不明確で、後から追加料金を請求されることになりました。」<br>
+                                            「定期的なメンテナンスの提案がなかったため、予期せぬトラブルに見舞われています。」<br>
+                                            「アフターサービスの連絡先が不明瞭で、問い合わせが困難な状態が続いています。」<br>
+                                            「メンテナンスのスタッフが不親切で、問題があっても適切に対処してもらえませんでした。」
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="half-wrapper half-right">
+                <div class="half-container right-container">
+                    <h1 class="head-text font-48-700">問題体験談</h1>
+                    <h2 class="sub-head font-32-700">リフォームトラブル</h2>
+                    <p class="head-desc font-18-500">
+                        リフォームには数限りないトラブルがつきものです。その中の一部をご紹介させていただきます。<br>
+                        これを見るといかに計画が必要であるかがわかると思います。
+                    </p>
+                    <ul class="cards-list">
+                        <li class="card-item">
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class="card-wrapper">
+                                <div class="card">
+                                    <div class="img-wrapper">
+                                        <img class="image008" src="./assets/img/image008.png">
+                                    </div>
+                                    <div class="right-wrapper">
+                                        <h4 class="title font-20-700">資金面</h4>
+                                        <p class="font-14-400">
+                                            「当初の予算設定が甘く、途中で資金が不足してしまった。」<br>
+                                            「低コストを優先しすぎて安価な材料を選んだが、すぐに交換が必要になり、結果的にコストが倍増した。」<br>
+                                            「追加工事が発生し、予定外の出費で貯金を切り崩すことになった。」<br>
+                                            「複数の工事をバラバラに発注したため、割高な費用がかかってしまった。」<br>
+                                            「リフォーム費用のためにローンを組んだが、長期計画がなく、返済が厳しくなった。」
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="card-item">
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class="card-wrapper">
+                                <div class="card reverse">
+                                    <div class="img-wrapper">
+                                        <img class="image009" src="./assets/img/image009.png">
+                                    </div>
+                                    <div class="right-wrapper">
+                                        <h4 class="title font-20-700">計画面</h4>
+                                        <p class="font-14-400">
+                                            「部屋の使用目的を見越して計画を立てなかったため、不便な間取りになってしまった。」<br>
+                                            「将来的な家族構成の変化を考慮せず、使わない部屋ができてしまった。」<br>
+                                            「リフォームの優先度を間違え、生活に必須な部分のリフォームを後回しにしていしまった。」<br>
+                                            「季節の変動を考えずにリフォームを行ったため、冬になってから断熱が不十分だと気づいた。」<br>
+                                            「事前の打ち合わせが不十分で、リフォーム後に改めて工事を追加することになり、2倍の時間と労力がかかった。」
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="card-item">
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class="card-wrapper">
+                                <div class="card">
+                                    <div class="img-wrapper">
+                                        <img class="image010" src="./assets/img/image010.png">
+                                    </div>
+                                    <div class="right-wrapper">
+                                        <h4 class="title font-20-700">工事面</h4>
+                                        <p class="font-14-400">
+                                            「一つ一つ工事を行ったため、家全体の統一感がなく、見た目が気になってしまう。」<br>
+                                            「短期間で工事を終わらせようとしたため、仕上がりの質が落ちた。」<br>
+                                            「一貫性のない複数の業者による工事で、工事の仕様がバラバラになった。」<br>
+                                            「工事の途中で業者とのトラブルがあり、工事が中断し、居住空間が長期にわたって使えなかった。」<br>
+                                            「必要な設備の更新を見落とし、新しいインテリアに見合わない古い設備が目立ってしまった。」
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://kit.fontawesome.com/8cbdf0a85f.js" crossorigin="anonymous"></script>
